--- a/index_.html
+++ b/index_.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -26,15 +26,17 @@
 			</div>
 			<div class="list">
 				<ul>
-					<a href="#"><li class="about">ABOUT ME</li></a>
-					<a href="#"><li class="family">FAMILY</li></a>
-					<a href="#"><li class="education">EDUCATION</li></a>
-					<a href="#"><li class="experience">EXPERIENCE</li></a>
-					<a href="#"><li class="contact">CONTACT ME</li></a>
+					<a href="aboutme.html"><li class="active">BIODATA</li></a>
+					<a href="family.html"><li class="family">FAMILY</li></a>
+					<a href="education.html"><li class="education">EDUCATION</li></a>
+					<a href="experience.html"><li class="experience">EXPERIENCE</li></a>
+					<a href="gallery.html"><li class="gallery">GALLERY</li></a>
+					<a href="contactme.html"><li class="contact">CONTACT</li></a>
+
 				</ul>
 			</div>
 			<div class="button">
-				<a class="btn" href="#">This is my kinda wonderland</a>
+				<a class="btn" href="index_.html">HOMEPAGE- This is my kinda wonderland</a>
 			</div>
 
 
@@ -42,7 +44,13 @@
 
 
 	</section>
-	
+
+<br><br><br><br>
+<center><img src="image/welcome.gif"></center>
+
+<br><center><video width="320"; height="240" controls><source src="video/OLAF.mp4" type="video/mp4"></video></center>
+
+
 
 </body>
 </html>
